# TCP

./: .coverage  .dockerignore  .gitignore  Dockerfile  README.md  coverage.xml  hello.py  junit.xml  pyproject.toml  server.py
.github/workflows/: docker-build.yml  testing.yaml  testing.yml
patch/: server.py
scripts/: benchmarking.py  obj_gltf.py  obj_gltf.sh  visualization.py
src/: wrapper.py
tests/: wrapper_test.py
workflows/: paint3d-optimized-pretrained.json  paint3d-optimized.json  paint3d.json
